---
source: aml-syntax/src/expressions/tests.rs
assertion_line: 106
expression: parse(input)
---
Binary:
  original: 1 == 2 && 3 == 4
  lhs:
    Binary:
      original: 1 == 2
      lhs:
        Primitive:
          original: "1"
          value:
            Int: 1
          location:
            start_byte: 0
            end_byte: 1
      rhs:
        Primitive:
          original: "2"
          value:
            Int: 2
          location:
            start_byte: 5
            end_byte: 6
      op: EqualEqual
      location:
        start_byte: 0
        end_byte: 6
  rhs:
    Binary:
      original: 3 == 4
      lhs:
        Primitive:
          original: "3"
          value:
            Int: 3
          location:
            start_byte: 10
            end_byte: 11
      rhs:
        Primitive:
          original: "4"
          value:
            Int: 4
          location:
            start_byte: 15
            end_byte: 16
      op: EqualEqual
      location:
        start_byte: 10
        end_byte: 16
  op: And
  location:
    start_byte: 0
    end_byte: 16
